fix overflow

--- a/src/app/lazy-components/blog/post-list/post-list.component.scss
+++ b/src/app/lazy-components/blog/post-list/post-list.component.scss
@@ -1,7 +1,7 @@
 header {
   margin-top: 133px;
   margin-bottom: 80px;
-  margin-left: 48px;
+  margin-left: 24px;
   h1 {
     font-weight: bold;
     font-size: 48px;
